// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtIcon Snap render AtIcon -- props className 1`] = `
<span
  class="at-icon test"
  style="font-size: 48px;"
/>
`;

exports[`AtIcon Snap render AtIcon -- props color 1`] = `
<span
  class="at-icon"
  style="font-size: 48px; color: rgb(255, 255, 255);"
/>
`;

exports[`AtIcon Snap render AtIcon -- props customStyle 1`] = `
<span
  class="at-icon"
  style="font-size: 48px; color: red;"
/>
`;

exports[`AtIcon Snap render AtIcon -- props prefixClass 1`] = `
<span
  class="prefixClass prefixClass-star"
  style="font-size: 48px;"
/>
`;

exports[`AtIcon Snap render AtIcon -- props size 1`] = `
<span
  class="at-icon"
  style="font-size: 28px;"
/>
`;

exports[`AtIcon Snap render AtIcon -- props value 1`] = `
<span
  class="at-icon at-icon-star"
  style="font-size: 48px;"
/>
`;

exports[`AtIcon Snap render initial AtIcon 1`] = `
<span
  class="at-icon"
  style="font-size: 48px;"
/>
`;
